--- a/teste/modelo.ipynb
+++ b/teste/modelo.ipynb
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b423bf5f",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1189,7 @@
    ],
    "source": [
     "ta = taxa_de_acerto * 100\n",
-    "print(f\"O modelo fez a previssoes: cachorro,porco,cachorro:({ta:.2f}%)\")"
+    "print(f\"O modelo fez a previssoes: cachorro,porco,cachorro:({ta:.2f}%)\")a"
    ]
   }
  ],
