--- a/teste/modelo.ipynb
+++ b/teste/modelo.ipynb
@@ -1189,7 +1189,7 @@
    ],
    "source": [
     "ta = taxa_de_acerto * 100\n",
-    "print(f\"O modelo fez a previssoes: cachorro,porco,cachorro:({ta:.2f}%)a\")"
+    "print(f\"O modelo fez a previssoes: cachorro,porco,cachorro:({ta:.2f}%)\")"
    ]
   }
  ],
