--- a/teste/modelo2.ipynb
+++ b/teste/modelo2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "75440651",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "df.head()"
+    "df.tail()"
    ]
   },
   {
