--- a/teste/modelo2.ipynb
+++ b/teste/modelo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b7c0c355",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "75440651",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "14c62c65",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "Name: comprou, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "ad52ae60",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "4        1          1        0           0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "09970ca2",
    "metadata": {},
    "outputs": [],
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "756e035e",
    "metadata": {},
    "outputs": [
@@ -368,33 +368,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "b7dd6041",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute '_validate_params'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[32m~\\AppData\\Local\\Temp\\ipykernel_9496\\2533582256.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# vamos treinar o modelo\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m sklearn.svm \u001b[38;5;28;01mimport\u001b[39;00m LinearSVC\n\u001b[32m      3\u001b[39m modelo = LinearSVC\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# aqui eu vou treinar o modelo\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m modelo.fit(treino_x,treino_y)\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# aqui eu vou fazer as previsoes\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# o model\u001b[39;00m\n\u001b[32m      8\u001b[39m previsoes = modelo.predict(teste_x)\n",
-      "\u001b[32mc:\\Users\\Andy54053236\\OneDrive - SENAC DF\\Documentos\\teste\\teste_pytho\\venv\\Lib\\site-packages\\sklearn\\base.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(estimator, *args, **kwargs)\u001b[39m\n\u001b[32m   1354\u001b[39m                 fit_method.__name__ == \u001b[33m\"partial_fit\"\u001b[39m \u001b[38;5;28;01mand\u001b[39;00m _is_fitted(estimator)\n\u001b[32m   1355\u001b[39m             )\n\u001b[32m   1356\u001b[39m \n\u001b[32m   1357\u001b[39m             \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m global_skip_validation \u001b[38;5;28;01mand\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m partial_fit_and_fitted:\n\u001b[32m-> \u001b[39m\u001b[32m1358\u001b[39m                 estimator._validate_params()\n\u001b[32m   1359\u001b[39m \n\u001b[32m   1360\u001b[39m             with config_context(\n\u001b[32m   1361\u001b[39m                 skip_parameter_validation=(\n",
-      "\u001b[32mc:\\Users\\Andy54053236\\OneDrive - SENAC DF\\Documentos\\teste\\teste_pytho\\venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m   6314\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m name \u001b[38;5;28;01mnot\u001b[39;00m \u001b[38;5;28;01min\u001b[39;00m self._accessors\n\u001b[32m   6315\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m self._info_axis._can_hold_identifiers_and_holds_name(name)\n\u001b[32m   6316\u001b[39m         ):\n\u001b[32m   6317\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m self[name]\n\u001b[32m-> \u001b[39m\u001b[32m6318\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m object.__getattribute__(self, name)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'DataFrame' object has no attribute '_validate_params'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# vamos treinar o modelo\n",
     "from sklearn.svm import LinearSVC\n",
-    "modelo = LinearSVC\n",
+    "modelo = LinearSVC()\n",
     "# aqui eu vou treinar o modelo\n",
     "modelo.fit(treino_x,treino_y)\n",
     "# aqui eu vou fazer as previsoes\n",
     "# o model\n",
     "previsoes = modelo.predict(teste_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c352751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A acurácia foi de 0.96%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes)\n",
+    "\n",
+    "\n",
+    "print(f\"A acurácia foi de {acuracia:.2f}%\")"
    ]
   },
   {
@@ -408,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
