--- a/teste/modelo2.ipynb
+++ b/teste/modelo2.ipynb
@@ -398,7 +398,7 @@
     }
    ],
    "source": [
-    "#a\n",
+    "#ga\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "acuracia = accuracy_score(teste_y, previsoes)\n",
@@ -409,11 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3a465517",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"a\")"
+   ]
   }
  ],
  "metadata": {
